[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/MainMenu/Window.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://src/MainMenu/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/shanghai.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/MainMenu/MainMenu.gd" type="Script" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 384 )
texture = ExtResource( 2 )

[node name="Window" parent="." instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 180.0
margin_top = 100.0
margin_right = 844.0
margin_bottom = 668.0

[node name="GridContainer" type="GridContainer" parent="Window"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Window/GridContainer"]
margin_right = 604.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SHISEN-SHO"
align = 1

[node name="btn_small" parent="Window/GridContainer" instance=ExtResource( 3 )]
margin_top = 91.0
margin_right = 604.0
margin_bottom = 187.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "small"

[node name="btn_big" parent="Window/GridContainer" instance=ExtResource( 3 )]
margin_top = 197.0
margin_right = 604.0
margin_bottom = 293.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "big"

[node name="btn_help" parent="Window/GridContainer" instance=ExtResource( 3 )]
margin_top = 303.0
margin_right = 604.0
margin_bottom = 399.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "help"

[node name="Exit" parent="Window/GridContainer" instance=ExtResource( 3 )]
margin_top = 409.0
margin_right = 604.0
margin_bottom = 505.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exit"
[connection signal="pressed" from="Window/GridContainer/btn_small" to="." method="_on_btn_small_pressed"]
[connection signal="pressed" from="Window/GridContainer/btn_big" to="." method="_on_btn_big_pressed"]
[connection signal="pressed" from="Window/GridContainer/btn_help" to="." method="_on_btn_help_pressed"]
[connection signal="pressed" from="Window/GridContainer/Exit" to="." method="_on_Exit_pressed"]
